# route-tts

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
route_tts/: __init__.py  client.py  types.py  voices.py
route_tts/eleven_labs/: client.py
tests/: test_client.py  test_elevenlabs.py  test_openai.py
