[tool.poetry]
name = "route-tts"
version = "0.2.0"
description = "A flexible routing library for GenAI text-to-speech (TTS)."
authors = ["Pierson Marks <pierson@jellypod.ai>"]
readme = "README.md"
license = "MIT"
homepage = "https://jellypod.ai/route-tts"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.8.2"
openai = "^1.43.0"
pydub = "^0.25.1"
elevenlabs = "^1.7.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
